fix logo positioning on mobile view

--- a/index.css
+++ b/index.css
@@ -173,7 +173,6 @@ main .location
 	background-size: contain;
 	height: 75vh;
 	margin-bottom: 10vh;
-	margin-top: 5vh;
 	width: 100%;
 }
 
